--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,9 @@
 }
 
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 }
 
 /* About Me View */
