--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,16 @@
   /* overflow: scroll; */
 }
 
+.bg-manila-harbor {
+  background: url("https://i.ibb.co/mNV1w10/manila-harbor-v202203090530.jpg") no-repeat center center fixed;
+  /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover; */
+  background-size: cover;
+  height: 100vh;
+  /* overflow: scroll; */
+}
+
 .main-pic {
   width: 30vh;
   border-radius: 50%;
