--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,18 @@
 
 /* Nav Bar */
 
+.at-top {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+.add-space-top {
+  margin-top: 100px;
+}
+
 .bg-navy-gradient {
   background: rgb(8,5,75);
   background: linear-gradient(120deg, rgba(8,5,75,1) 0%, rgba(76,76,205,1) 40%, rgba(8,5,75,1) 100%);
